# tracewebstudio-commerce-backend

./: .env  Cargo.toml
migrations/: 001_create_commerce_schema.sql  002_add_published_field.sql
src/: main.rs
src/handlers/: admin.rs  cart.rs  categories.rs  coupons.rs  customers.rs  discounts.rs  inventory.rs  invoices.rs  mod.rs  orders.rs  payment_gateways.rs  products.rs  public_cart.rs  public_categories.rs  public_checkout.rs  public_products.rs  shipping.rs  taxes.rs  tenant_commerce.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/services/: migrations.rs
